--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -37,9 +37,9 @@
           <td><%= student.first_name %></td>
           <td><%= student.last_name %></td>
           <td><%= student.email %></td>
-          <td><%= student.phone_num %></td>
+          <td><%= number_to_phone(student.phone_num) %></td>
           <% if current_user.admin? %>
-            <td><%= student.balance %></td>
+            <td><%= number_to_currency(student.balance) %></td>
             <td><%= link_to 'New Payment', new_student_payment_path(student) %></td>
             <td><%= link_to 'View Payments', student_payments_path(student) %></td>
             <td><%= link_to 'Student Profile', student %></td>
