Add scaffold for performance_charts & google chart renders on load

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -12,7 +12,7 @@
       <strong>Cohort:</strong>
     </div>
       <div class="panel-body">
-        <%= Cohort.find(@student.cohort_id).name %>
+        <%= Cohort.find(@student.cohort_id).cohort_number %>
       </div>
     <div class="panel-heading">
       <strong>First name:</strong>
