--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,46 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <!--Load the AJAX API-->
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript">
+
+  // Load the Visualization API and the piechart package.
+  google.load('visualization', '1.0', {'packages':['corechart']});
+
+  // Set a callback to run when the Google Visualization API is loaded.
+  google.setOnLoadCallback(drawChart);
+
+  // Callback that creates and populates a data table,
+  // instantiates the pie chart, passes in the data and
+  // draws it.
+
+  function drawChart() {
+
+    // Create the data table.
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Toppings');
+    data.addColumn('number', 'Slices');
+    data.addRows([
+      ['Cohort Number', <%=@cohorts.last.cohort_number%>],
+      ['Onions', 1]
+    ]);
+
+    // Set chart options
+    var options = {'title':'How Much Pizza I Ate Last Night',
+                   'width':700,
+                   'height':400,
+                   'legend.alignment': 'left',
+                  //  color:
+                    is3D:true};
+
+    // Instantiate and draw our chart, passing in some options.
+    var chart = new         google.visualization.PieChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+  }
+</script>
 </head>
 <body>
-
-
     <div class="notice"><%= notice %></div>
     <div class="alert"><%= alert %></div>
      <% if user_signed_in? %>
@@ -20,6 +55,8 @@
        <%= yield %>
      <% end %>
 
+     <!--Div that will hold the pie chart-->
+     <div id="chart_div"></div>
 
   <!-- <% if notice %>
     <p class="alert alert-success col-md-2 "><%= notice %></p>
