--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -8,12 +8,16 @@
   <% end %>
 <% end %>
 
-<%= form_tag search_students_path do %>
-  <div class='input-append'>
-    <input class="search" id='seachbar' name='query' placeholder='Search for Student' type='text' autocomplete="off">
-    <input type="submit" value="Search" class="btn btn-info">
-  </div>
+<%= form_tag(students_path, :method => "get", id: "search-form") do %>
+<%= text_field_tag :search, params[:search], placeholder: "Search Students" %>
+<%= submit_tag "Search" %>
 <% end %>
+
+<!-- <% if @students.present? %>
+  <%= render @students %>
+<% else %>
+  <p>There are no posts containing the term(s) <%= "#{params[:search]}" %>.</p>
+<% end %> -->
 
 <div class="text-center">
   <form class="student-filters">
