Change width of search bar

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -8,10 +8,10 @@
   <% end %>
 <% end %>
 
-<div class="text-center">
-  <div class="search-field">
+<div class="container text-center">
+  <div class="search-field col-md-12">
     <%= form_tag(students_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Students" %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Students", style:"width: 300px" %>
     <%= submit_tag "Search", class: "btn btn-info" %>
     <% end %>
 
