Text align center

--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -52,5 +52,5 @@
       <% end %>
     </tbody>
   </table>
-  <%= will_paginate @payments %>
+  <div class="text-center"><%= will_paginate @payments %></div>
 </div>
