--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,5 +1,13 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
+<div class="row">
+  <div class="col-md-12 text-center">
+    <div id="payment-listing">
+      <h2>All Payments</h2>
+    </div>
+  </div>
+</div>
+
 <div class="container text-center">
   <div class="search-field col-md-12">
     <%= form_tag(payments_path, :method => "get", id: "search-form") do %>
@@ -8,20 +16,13 @@
     <% end %>
 
     <% if @search_payments.empty? == false %>
-      <%= render "search_students" %>
+      <%= render "search_student" %>
     <% elsif params[:search].present? && @search_payments.empty? %>
       <p>There are no posts containing the term(s) <%= "#{params[:search]}" %>.</p>
     <% end %>
   </div>
 </div>
-
-<div class="row">
-  <div class="col-md-12 text-center">
-    <div id="payment-listing">
-      <h2>All Payments</h2>
-    </div>
-  </div>
-</div>
+<br>
 
 <div class="row">
     <div class="col-md-12 text-center">
