--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,12 +1,10 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
-<div class="row">
-  <div class="col-md-12 text-center">
+  <div class="row col-md-12 text-center">
     <div id="payment-listing">
       <h2>All Payments</h2>
     </div>
   </div>
-</div>
 
 <div class="container text-center">
   <div class="search-field col-md-12">
