--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -6,20 +6,24 @@
     </div>
   </div>
 
-<div class="container text-center">
-  <div class="search-field col-md-12">
-    <%= form_tag(payments_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Payments by Date", style: "width: 300px;" %>
-    <%= submit_tag "Search", class: "btn btn-info" %>
-    <% end %>
+  <div class="container text-center">
+    <div class="search-field col-md-12">
+      <%= form_tag(payments_path, :method => "get", id: "search-form") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search for Payments", style: "width: 300px;" %>
+      <%= submit_tag "Search", class: "btn btn-info" %>
+      <% end %>
 
-    <% if @search_payments.empty? == false %>
-      <%= render "search_student" %>
-    <% elsif params[:search].present? && @search_payments.empty? %>
-      <p>There are no posts containing the term(s) <%= "#{params[:search]}" %>.</p>
-    <% end %>
+      <% if @search_payments.empty? == false %>
+        <%= render "search_student" %>
+      <% elsif params[:search].present? && @search_payments.empty? %>
+        <p>There are no posts containing the term(s) <%= "#{params[:search]}" %>.</p>
+      <% end %>
+    </div>
   </div>
-</div>
+
+  <div class="container text-center">
+    <p>From: <input type="text" id="from-datepicker"> To: <input type="text" id="to-datepicker"></p>
+  </div>
 <br>
 
 <div class="row">
