--- a/app/views/checks/index.html.erb
+++ b/app/views/checks/index.html.erb
@@ -29,7 +29,7 @@
           <td><%= check.student.first_name %> <%= check.student.last_name %></td>
           <td><%= number_to_currency(check.amount) %></td>
           <td><%= check.pay_date.strftime("%m/%d/%Y") %></td>
-          <td><%= check.deposited_date.strftime("%m/%d/%Y") %></td>
+          <td><%= check.deposited_date.strftime("%m/%d/%Y") unless check.deposited_date.nil? %></td>
           <td><%= check.check_number %></td>
           <td><%= check.name_on_check %></td>
           <td><%= link_to 'Show', check %></td>
