--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -22,7 +22,7 @@
     </p>
     <p>
       <strong>Deposited Date:</strong>
-      <%= @check.deposited_date.strftime("%m/%d/%Y") %>
+      <%= @check.deposited_date.strftime("%m/%d/%Y") unless @check.deposited_date.nil? %>
     </p>
     <p>
       <strong>Check Number:</strong>
