--- a/app/views/students/_student_collection.html.erb
+++ b/app/views/students/_student_collection.html.erb
@@ -25,7 +25,7 @@
               <td><%= link_to "#{student.full_name}", student %></td>
               <td><%= student.email %></td>
               <td><%= number_to_phone(student.phone_num) %></td>
-              <% if student.balance == 0 %>
+              <% if student.balance <= 0 %>
                 <td class="payments_color_blue"><%= number_to_currency(student.balance) %></td>
               <% elsif student.balance > 0 %>
                 <td class="payments_color_orange"><%= number_to_currency(student.balance) %></td>
