Cohort validations and all payments bug

--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -19,7 +19,7 @@
         </div>
         <div class="field">
           <%= f.label :location %><br>
-          <%= f.select :location, ["Miami", "Fort Lauderdale", "Miami Beach"] %>
+          <%= f.select :location, [["Select", :none], "Miami", "Fort Lauderdale", "Miami Beach"] %>
         </div>
         <div class="field">
           <%= f.label :cohort_number, "Cohort Number" %><br>
