--- a/app/views/stripes/show.html.erb
+++ b/app/views/stripes/show.html.erb
@@ -2,7 +2,8 @@
 
 <div class="container">
     <div class="row">
-      <%= link_to 'Back', stripes_path, class: "btn btn-info button-color-white", id:"stripes-show-back-btn" %>
+      <%= link_to 'All Payments', payments_path, class: "btn btn-info button-color-white", id:"stripes-show-back-btn" %>
+      <%= link_to "#{@stripe.student.full_name} Payment(s)", student_payments_path(@stripe.student), class: "btn btn-info button-color-white", id:"stripes-show-back-btn" %>
     </div>
 </div>
 
