--- a/app/views/wires/show.html.erb
+++ b/app/views/wires/show.html.erb
@@ -2,7 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <%= link_to 'Back', wires_path, class: "btn btn-info btn-text-color", id: "wire-show-back-btn-left-margin" %>
+        <%= link_to 'All Payments', payments_path, class: "btn btn-info btn-text-color", id: "wire-show-back-btn-left-margin" %>
+        <%= link_to "#{@wire.student.full_name} Payment(s)", student_payments_path(@wire.student), class: "btn btn-info btn-text-color", id: "wire-show-back-btn-left-margin" %>
     </div>
 </div>
 
