Students now render by created at date, first student created at top

--- a/app/views/students/_student_collection.html.erb
+++ b/app/views/students/_student_collection.html.erb
@@ -17,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @filtered_students.each do |student| %>
+      <% @filtered_students.order(created_at: :asc).each do |student| %>
         <% if student.cohort.present? %>
           <tr>
             <% if current_user.admin? %>
