--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -1,6 +1,6 @@
 <!-- <p id="notice"><%= notice %></p> -->
 <div class="container">
-    <div class="row">
+    <div class="btn-group" role="group" id="button-nav-group">
           <%= link_to 'All Payments', payments_path, class: "btn btn-info btn-text-color", id: "show-loans-back-btn"%>
           <%= link_to "#{@loan.student.full_name} Payment(s)", student_payments_path(@loan.student), class: "btn btn-info btn-text-color", id: "show-loans-back-btn"%>
     </div>
