--- a/app/views/wires/show.html.erb
+++ b/app/views/wires/show.html.erb
@@ -1,7 +1,7 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
 <div class="container">
-    <div class="row">
+    <div class="btn-group" role="group" id="button-nav-group">
         <%= link_to 'All Payments', payments_path, class: "btn btn-info btn-text-color", id: "wire-show-back-btn-left-margin" %>
         <%= link_to "#{@wire.student.full_name} Payment(s)", student_payments_path(@wire.student), class: "btn btn-info btn-text-color", id: "wire-show-back-btn-left-margin" %>
     </div>
