--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -26,7 +26,7 @@
             <td><%= cohort.cohort_number %></td>
             <td><%= cohort.capacity %></td>
             <td><%= cohort.capacity - cohort.students.count %></td>
-            <td><%= cohort.start_date %></td>
+            <td><%= cohort.start_date.strftime("%m/%d/%Y") %></td>
             <td><%= link_to 'View Cohort', cohort %></td>
             <% if current_user.admin? %>
               <td><%= link_to 'Edit', edit_cohort_path(cohort) %></td>
