Edit button description

--- a/app/views/cohorts/edit.html.erb
+++ b/app/views/cohorts/edit.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="row">
-      <%= link_to 'Cohorts', cohorts_path, class: "btn btn-info btn-text-color", id: "edit-cohort-cohort-btn" %>
+      <%= link_to 'Back to Cohorts', cohorts_path, class: "btn btn-info btn-text-color", id: "edit-cohort-cohort-btn" %>
   </div>
 </div>
 
