Align buttons in show pages

--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -5,6 +5,9 @@
 //   margin-left: 6%;
 // }
 #check-show-back-btn-left-margin {
+  margin-left: 8%;
+}
+#check-show-student-payments {
   margin-left: 0%;
 }
 #check-edit-show-btn-left-margin {
