--- a/app/assets/stylesheets/stripes.scss
+++ b/app/assets/stylesheets/stripes.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #stripes-show-back-btn {
-  margin-left: 0px;
+  margin-left: 9.2%;
+}
+#stripes-student-payments-btn {
+  margin-left: 0%;
 }
 #editing-stripe-show-btn {
   margin-left: 75px;
