--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -25,8 +25,9 @@ body {
   margin-left: 10px;
 }
 #button-nav-group {
-  padding: 0;
+  padding: 2%;
   padding-top: 2%;
+  // margin-left: 11%;
 }
 #navbar-btns {
   float: right;
