--- a/app/assets/stylesheets/loans.scss
+++ b/app/assets/stylesheets/loans.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #show-loans-back-btn {
+  margin-left: 8%;
+}
+#show-student-payments-btn {
   margin-left: 0%;
 }
 #loan-edit-show-btn {
