--- a/app/assets/stylesheets/wires.scss
+++ b/app/assets/stylesheets/wires.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #wire-show-back-btn-left-margin {
+  margin-left: 8%;
+}
+#wire-show-student-payments {
   margin-left: 0%;
 }
 #wire-edit-back-btn-left-margin {
