--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,8 +1,8 @@
 <!-- <p id="notice"><%= notice %></p> -->
 <div class="container">
-    <div class="btn-group" role="group" id="button-nav-group">
+    <div id="button-nav-group">
           <%= link_to 'All Payments', payments_path, class: "btn btn-info btn-text-color", id: "check-show-back-btn-left-margin" %>
-          <%= link_to "#{@check.student.full_name} Payment(s)", student_payments_path(@check.student), class: "btn btn-info btn-text-color", id: "check-show-back-btn-left-margin" %>
+          <%= link_to "#{@check.student.full_name} Payment(s)", student_payments_path(@check.student), class: "btn btn-info btn-text-color", id: "check-show-student-payments" %>
     </div>
 </div>
 
