--- a/app/views/stripes/show.html.erb
+++ b/app/views/stripes/show.html.erb
@@ -2,9 +2,9 @@
 
 <div class="container">
     <div class="row">
-      <div class="btn-group" role="group" id="button-nav-group">
+      <div id="button-nav-group">
         <%= link_to 'All Payments', payments_path, class: "btn btn-info button-color-white", id:"stripes-show-back-btn" %>
-        <%= link_to "#{@stripe.student.full_name} Payment(s)", student_payments_path(@stripe.student), class: "btn btn-info button-color-white", id:"stripes-show-back-btn" %>
+        <%= link_to "#{@stripe.student.full_name} Payment(s)", student_payments_path(@stripe.student), class: "btn btn-info button-color-white", id:"stripes-student-payments-btn" %>
       </div>
     </div>
 </div>
