--- a/app/views/students/payments.html.erb
+++ b/app/views/students/payments.html.erb
@@ -1,7 +1,7 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
 <div class="row">
-  <%= link_to("Student Profile", @student, :class => 'btn btn-large btn-info btn-text-color left-side-btn-offset') %>
+  <%= link_to("#{@student.first_name}'s Profile", @student, :class => 'btn btn-large btn-info btn-text-color left-side-btn-offset') %>
 </div>
 <div class="row">
   <div class="col-md-12 text-center">
