--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,6 +1,6 @@
 <!-- <p id="notice"><%= notice %></p> -->
 <div class="container">
-    <div class="btn-group" role="group" id="button-nav-group">
+    <div id="button-nav-group">
           <%= link_to 'Back to Cohorts', cohorts_path, class: "btn btn-info btn-text-color", id: "check-show-back-btn-left-margin" %>
     </div>
 </div>
