Add back button to cohorts and students show page

--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,7 +1,8 @@
 <!-- <p id="notice"><%= notice %></p> -->
 <div class="container">
     <div id="button-nav-group">
-          <%= link_to 'Back to Cohorts', cohorts_path, class: "btn btn-info btn-text-color", id: "check-show-back-btn-left-margin" %>
+      <%= link_to 'Back to Students', students_path, class: "btn btn-info btn-text-color", id: "check-show-students-path" %>  
+      <%= link_to 'Back to Cohorts', cohorts_path, class: "btn btn-info btn-text-color", id: "check-show-back-btn-left-margin" %>
     </div>
 </div>
 
