--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -5,6 +5,9 @@
 //   margin-left: 6%;
 // }
 #check-show-back-btn-left-margin {
+  margin-left: 0%;
+}
+#check-show-students-path {
   margin-left: 8%;
 }
 #check-show-student-payments {
